# house_scrapping

./: README.md
house_scrapping/: pyproject.toml  to_do.md
house_scrapping/Data/: freguesias_portugal.xlsx
house_scrapping/GUI/: controller.py  main.py  model.py  view.py
house_scrapping/house_scrapping/: Scrapper.py  __init__.py  app.py  dropdown.py  main.py  remax_house_info_scraper.py  remax_url_scrapper.py
house_scrapping/tests/: test_remax_house_info_scapper.py  test_remax_url_scapper.py
